workaround gcc compiler bug

There is a regression in gcc since version 12.0 to at least 12.2.1 that
causes gcc to emit incorrect machine code.

Code like

  std::optional<int> o1;
  try {
    o1 = foo(); // foo can throw
  } catch(...) {
    process(o1);
  }

  std::optional<double> o2{o1};
  bar(o2);

may trigger -Wmaybe-uninitialized with -O2 optimization and the call
process(o1) results in the store for variable o1 removed (see [1]).

Interestingly, we can work around the bug by setting both std::optional
to contain the same type.

I prefer altering our code a bit so our code is correctly compiled by
gcc versions that contain this regression.

[1] https://gcc.gnu.org/bugzilla/show_bug.cgi?id=109434

Change-Id: I29d73533b8a8550aeb7f6f0b92b5287021a4f193